<resources>
    <string name="app_name">Crud App</string>
    <string name="welcome_to_crud_app">Welcome to Crud APP</string>
    <string name="hello">Hello</string>
    <string name="button">Button</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="home_screen">Home Screen</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
</resources>