<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="415dp" />

        <Button
            android:id="@+id/Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="189dp" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="304dp" />

        <Button
            android:id="@+id/Read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="516dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/HomeScreenTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_screen"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>